# aulasvirtuales-toolkit

./: .gitignore  .release-please-config.json  .release-please-manifest.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/skills/commit/: SKILL.md
.claude/skills/pr/: SKILL.md
.github/workflows/: release-please.yml
Formula/: aulasvirtuales.rb
apps/aulasvirtuales-cli/: CHANGELOG.md  pyproject.toml
apps/aulasvirtuales-cli/src/aulasvirtuales_cli/: __init__.py  app.py  repl.py
apps/aulasvirtuales-cli/src/aulasvirtuales_cli.egg-info/: entry_points.txt  requires.txt  top_level.txt
apps/aulasvirtuales-cli/src/aulasvirtuales_cli/commands/: auth.py  courses.py  events.py  forums.py  grades.py  settings.py
apps/aulasvirtuales-cli/src/aulasvirtuales_cli/tui/: config_screen.py  file_selector.py
apps/aulasvirtuales-mcp/: CHANGELOG.md  pyproject.toml
apps/aulasvirtuales-mcp/src/aulasvirtuales_mcp/: __init__.py  server.py
apps/aulasvirtuales-mcp/src/aulasvirtuales_mcp.egg-info/: requires.txt  top_level.txt
apps/aulasvirtuales-mcp/src/aulasvirtuales_mcp/tools/: courses.py  downloads.py  events.py  forums.py  grades.py
docs/: README.md
docs/adr/: 001-monorepo-with-uv-workspaces.md  002-playwright-for-sso-auth.md  003-keyring-for-credential-storage.md  004-html-scraping-vs-moodle-api.md  005-langchain-for-ocr-pipeline.md  006-fastmcp-as-mcp-framework.md  007-textual-for-interactive-tui.md  008-repl-only-interactive-gui.md
docs/architecture/: class_diagram.mmd  package_diagram.mmd  technical_blueprint.md
docs/prd/: product_requirements.md
skills/aulasvirtuales/: SKILL.md
skills/aulasvirtuales-cli/: SKILL.md
tests/: conftest.py
tests/integration/: conftest.py  test_auth_flow.py  test_download_and_convert.py  test_mcp_tools.py
tests/unit/: conftest.py
tests/unit/cli/: test_app.py
tests/unit/core/: test_auth.py  test_client.py  test_config.py  test_converter.py  test_downloader.py  test_ocr.py  test_parsers.py  test_reader.py
tests/unit/mcp/: test_server.py
