[project]
name = "aulasvirtuales-toolkit"
version = "0.2.1"
description = "Toolkit to interact with UTN FRBA's Moodle virtual classrooms"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aulasvirtuales-core",
    "aulasvirtuales-cli",
    "aulasvirtuales-mcp",
]

[project.optional-dependencies]
ocr = ["aulasvirtuales-core[ocr]"]

[tool.uv.workspace]
members = ["packages/*", "apps/*"]

[tool.uv.sources]
aulasvirtuales-core = { workspace = true }
aulasvirtuales-cli = { workspace = true }
aulasvirtuales-mcp = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "commitizen>=4.0",
    "pre-commit>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
