[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aulasvirtuales-mcp"
version = "0.5.2"
description = "MCP server to interact with UTN FRBA's Moodle virtual classrooms"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "aulasvirtuales-core",
    "fastmcp",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
aulasvirtuales-mcp = "aulasvirtuales_mcp.server:main"
